EnvironmentCreator/obj/Debug/GStratParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.2.2-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\ANTLR\Grammars\GStrat.g4 by ANTLR 4.2.2-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace EnvironmentCreator.Gammars {
#pragma warning disable 3021
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.2.2-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class GStratParser : Parser {
	public const int
		T__14=1, T__13=2, T__12=3, T__11=4, T__10=5, T__9=6, T__8=7, T__7=8, T__6=9, 
		T__5=10, T__4=11, T__3=12, T__2=13, T__1=14, T__0=15, BOOL_ID=16, NUMBER_ID=17, 
		ID=18, INT=19, MUL=20, DIV=21, MOD=22, ADD=23, SUB=24, EQUAL=25, NOT_EQUAL=26, 
		LESS_THEN=27, LESS__OR_EQ=28, MORE_THEN=29, MORE_OR_EQ=30, ASSIGN=31, 
		ASSIGN_MINUS=32, ASSIGN_ADD=33, ASSIGN_DIV=34, ASSIGN_MUL=35, ASSIGN_MOD=36;
	public static readonly string[] tokenNames = {
		"<INVALID>", "','", "'('", "'{'", "'action'", "'effe'", "'extends'", "'}'", 
		"'effs'", "'pre'", "')'", "';'", "'duration'", "'act'", "'type'", "'instance'", 
		"'boolean'", "'number'", "ID", "INT", "'*'", "'/'", "'%'", "'+'", "'-'", 
		"'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'='", "'-='", "'+='", "'/='", 
		"'*='", "'%='"
	};
	public const int
		RULE_root = 0, RULE_type = 1, RULE_variable = 2, RULE_instance = 3, RULE_action = 4, 
		RULE_precondition = 5, RULE_functionCall = 6, RULE_effect = 7, RULE_actionCall = 8, 
		RULE_expression = 9;
	public static readonly string[] ruleNames = {
		"root", "type", "variable", "instance", "action", "precondition", "functionCall", 
		"effect", "actionCall", "expression"
	};

	public override string GrammarFileName { get { return "GStrat.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public GStratParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class RootContext : ParserRuleContext {
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public IReadOnlyList<TypeContext> type() {
			return GetRuleContexts<TypeContext>();
		}
		public IReadOnlyList<ActionContext> action() {
			return GetRuleContexts<ActionContext>();
		}
		public InstanceContext instance(int i) {
			return GetRuleContext<InstanceContext>(i);
		}
		public IReadOnlyList<InstanceContext> instance() {
			return GetRuleContexts<InstanceContext>();
		}
		public ActionContext action(int i) {
			return GetRuleContext<ActionContext>(i);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_root; }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterRoot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitRoot(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 25;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 14) | (1L << 15))) != 0)) {
				{
				State = 23;
				switch (_input.La(1)) {
				case 14:
					{
					State = 20; type();
					}
					break;
				case 15:
					{
					State = 21; instance();
					}
					break;
				case 4:
					{
					State = 22; action();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 27;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_type; }
	 
		public TypeContext() { }
		public virtual void CopyFrom(TypeContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NewTypeContext : TypeContext {
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(GStratParser.ID); }
		public IReadOnlyList<VariableContext> variable() {
			return GetRuleContexts<VariableContext>();
		}
		public VariableContext variable(int i) {
			return GetRuleContext<VariableContext>(i);
		}
		public ITerminalNode ID(int i) {
			return GetToken(GStratParser.ID, i);
		}
		public NewTypeContext(TypeContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterNewType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitNewType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNewType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			_localctx = new NewTypeContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 28; Match(14);
			State = 29; Match(ID);
			State = 32;
			_la = _input.La(1);
			if (_la==6) {
				{
				State = 30; Match(6);
				State = 31; Match(ID);
				}
			}

			State = 34; Match(3);
			State = 38;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==BOOL_ID || _la==NUMBER_ID) {
				{
				{
				State = 35; variable();
				}
				}
				State = 40;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 41; Match(7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableContext : ParserRuleContext {
		public VariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_variable; }
	 
		public VariableContext() { }
		public virtual void CopyFrom(VariableContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NewVariableContext : VariableContext {
		public IToken opt;
		public ITerminalNode ID() { return GetToken(GStratParser.ID, 0); }
		public NewVariableContext(VariableContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterNewVariable(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitNewVariable(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNewVariable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableContext variable() {
		VariableContext _localctx = new VariableContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_variable);
		int _la;
		try {
			_localctx = new NewVariableContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			((NewVariableContext)_localctx).opt = _input.Lt(1);
			_la = _input.La(1);
			if ( !(_la==BOOL_ID || _la==NUMBER_ID) ) {
				((NewVariableContext)_localctx).opt = _errHandler.RecoverInline(this);
			}
			Consume();
			State = 44; Match(ID);
			State = 45; Match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstanceContext : ParserRuleContext {
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(GStratParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(GStratParser.ID, i);
		}
		public InstanceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_instance; }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterInstance(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitInstance(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstance(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstanceContext instance() {
		InstanceContext _localctx = new InstanceContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_instance);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47; Match(15);
			State = 48; Match(ID);
			State = 49; Match(ID);
			State = 54;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==1) {
				{
				{
				State = 50; Match(1);
				State = 51; Match(ID);
				}
				}
				State = 56;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 57; Match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionContext : ParserRuleContext {
		public PreconditionContext precondition(int i) {
			return GetRuleContext<PreconditionContext>(i);
		}
		public IReadOnlyList<EffectContext> effect() {
			return GetRuleContexts<EffectContext>();
		}
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(GStratParser.ID); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public EffectContext effect(int i) {
			return GetRuleContext<EffectContext>(i);
		}
		public IReadOnlyList<PreconditionContext> precondition() {
			return GetRuleContexts<PreconditionContext>();
		}
		public ITerminalNode ID(int i) {
			return GetToken(GStratParser.ID, i);
		}
		public ActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_action; }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterAction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitAction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionContext action() {
		ActionContext _localctx = new ActionContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_action);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59; Match(4);
			State = 60; Match(ID);
			State = 61; Match(2);
			State = 73;
			_la = _input.La(1);
			if (_la==ID) {
				{
				{
				State = 62; Match(ID);
				State = 63; Match(ID);
				}
				State = 70;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==1) {
					{
					{
					State = 65; Match(1);
					State = 66; Match(ID);
					State = 67; Match(ID);
					}
					}
					State = 72;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 75; Match(10);
			State = 76; Match(12);
			State = 77; Match(ASSIGN);
			State = 78; expression(0);
			State = 79; Match(9);
			State = 80; Match(3);
			State = 89;
			_la = _input.La(1);
			if (_la==ID) {
				{
				State = 81; precondition();
				State = 86;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==11) {
					{
					{
					State = 82; Match(11);
					State = 83; precondition();
					}
					}
					State = 88;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 91; Match(7);
			State = 92; Match(8);
			State = 93; Match(3);
			State = 102;
			_la = _input.La(1);
			if (_la==13 || _la==ID) {
				{
				State = 94; effect();
				State = 99;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==11) {
					{
					{
					State = 95; Match(11);
					State = 96; effect();
					}
					}
					State = 101;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 104; Match(7);
			State = 105; Match(5);
			State = 106; Match(3);
			State = 115;
			_la = _input.La(1);
			if (_la==13 || _la==ID) {
				{
				State = 107; effect();
				State = 112;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==11) {
					{
					{
					State = 108; Match(11);
					State = 109; effect();
					}
					}
					State = 114;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 117; Match(7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreconditionContext : ParserRuleContext {
		public PreconditionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_precondition; }
	 
		public PreconditionContext() { }
		public virtual void CopyFrom(PreconditionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PrecondExprContext : PreconditionContext {
		public IToken op;
		public ITerminalNode ID() { return GetToken(GStratParser.ID, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public PrecondExprContext(PreconditionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterPrecondExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitPrecondExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrecondExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CallFnPrecondContext : PreconditionContext {
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public CallFnPrecondContext(PreconditionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterCallFnPrecond(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitCallFnPrecond(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCallFnPrecond(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreconditionContext precondition() {
		PreconditionContext _localctx = new PreconditionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_precondition);
		int _la;
		try {
			State = 123;
			switch ( Interpreter.AdaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new PrecondExprContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 119; Match(ID);
				State = 120;
				((PrecondExprContext)_localctx).op = _input.Lt(1);
				_la = _input.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUAL) | (1L << NOT_EQUAL) | (1L << LESS_THEN) | (1L << LESS__OR_EQ) | (1L << MORE_THEN) | (1L << MORE_OR_EQ))) != 0)) ) {
					((PrecondExprContext)_localctx).op = _errHandler.RecoverInline(this);
				}
				Consume();
				State = 121; expression(0);
				}
				break;

			case 2:
				_localctx = new CallFnPrecondContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 122; functionCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionCallContext : ParserRuleContext {
		public IReadOnlyList<ITerminalNode> INT() { return GetTokens(GStratParser.INT); }
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(GStratParser.ID); }
		public ITerminalNode INT(int i) {
			return GetToken(GStratParser.INT, i);
		}
		public ITerminalNode ID(int i) {
			return GetToken(GStratParser.ID, i);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_functionCall; }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterFunctionCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitFunctionCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionCallContext functionCall() {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_functionCall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125; Match(ID);
			State = 126; Match(2);
			State = 128;
			switch ( Interpreter.AdaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				State = 127;
				_la = _input.La(1);
				if ( !(_la==ID || _la==INT) ) {
				_errHandler.RecoverInline(this);
				}
				Consume();
				}
				break;
			}
			State = 135;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==1 || _la==INT) {
				{
				State = 133;
				switch (_input.La(1)) {
				case 1:
					{
					State = 130; Match(1);
					State = 131; Match(ID);
					}
					break;
				case INT:
					{
					State = 132; Match(INT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 137;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 138; Match(10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EffectContext : ParserRuleContext {
		public EffectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_effect; }
	 
		public EffectContext() { }
		public virtual void CopyFrom(EffectContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class CallFnContext : EffectContext {
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public CallFnContext(EffectContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterCallFn(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitCallFn(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCallFn(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AssignExprContext : EffectContext {
		public IToken opt;
		public ITerminalNode ID() { return GetToken(GStratParser.ID, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignExprContext(EffectContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterAssignExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitAssignExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CallActContext : EffectContext {
		public ActionCallContext actionCall() {
			return GetRuleContext<ActionCallContext>(0);
		}
		public CallActContext(EffectContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterCallAct(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitCallAct(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCallAct(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EffectContext effect() {
		EffectContext _localctx = new EffectContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_effect);
		int _la;
		try {
			State = 145;
			switch ( Interpreter.AdaptivePredict(_input,17,_ctx) ) {
			case 1:
				_localctx = new AssignExprContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 140; Match(ID);
				State = 141;
				((AssignExprContext)_localctx).opt = _input.Lt(1);
				_la = _input.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASSIGN) | (1L << ASSIGN_MINUS) | (1L << ASSIGN_ADD) | (1L << ASSIGN_DIV) | (1L << ASSIGN_MUL) | (1L << ASSIGN_MOD))) != 0)) ) {
					((AssignExprContext)_localctx).opt = _errHandler.RecoverInline(this);
				}
				Consume();
				State = 142; expression(0);
				}
				break;

			case 2:
				_localctx = new CallFnContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 143; functionCall();
				}
				break;

			case 3:
				_localctx = new CallActContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 144; actionCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionCallContext : ParserRuleContext {
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(GStratParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(GStratParser.ID, i);
		}
		public ActionCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_actionCall; }
		public override void EnterRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.EnterActionCall(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGStratListener typedListener = listener as IGStratListener;
			if (typedListener != null) typedListener.ExitActionCall(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGStratVisitor<TResult> typedVisitor = visitor as IGStratVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionCallContext actionCall() {
		ActionCallContext _localctx = new ActionCallContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_actionCall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147; Match(13);
			State = 148; Match(ID);
			State = 149; Match(2);
			State = 158;
			_la = _input.La(1);
			if (_la==ID) {
				{
				{
				State = 150; Match(ID);
				}
				State = 155;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==1) {
					{
					{
					State = 151; Match(1);
					State = 152; Match(ID);
					}
					}
					State = 157;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 160; Match(10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
